# app/controllers/api/v1/tickets_controller.rb
@@ -1,0 +1,36 @@
+module Api
+  module V1
+    class TicketsController < ApplicationController
+      def index
+        tickets = Ticket.all
+        if tickets
+          render json: tickets
+        else
+          render json: 'No Content', status: 204
+        end
+
+      end
+
+      def create
+        ticket = Ticket.new(ticket_params)
+        if ticket.save
+          render json: TicketSerializer.new(ticket), status: 201
+        else
+          json_response(ticket.errors.messages.to_json, status: 422)
+        end
+      end
+
+      private
+
+      def ticket_params
+        params.require(:ticket).permit(:id,
+                                       :name,
+                                       :quantity,
+                                       :description,
+                                       :status,
+                                       :price,
+                                       :event_id)
+      end
+    end
+  end
+end
