# app/models/ticket.rb
@@ -1,3 +1,5 @@
 class Ticket < ApplicationRecord
   belongs_to :event
+
+  validates :name, :price, :quantity, :status, :event, presence: true
 end
