# app/serializers/ticket_serializer.rb
@@ -1,0 +1,5 @@
+class TicketSerializer
+  include FastJsonapi::ObjectSerializer
+
+  attributes :name, :quantity, :description, :status, :price, :event_id
+end
